--- a/Swagger/pom.xml
+++ b/Swagger/pom.xml
@@ -23,5 +23,10 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.evolution</groupId>
+			<artifactId>Reflect</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
