--- a/Swagger/pom.xml
+++ b/Swagger/pom.xml
@@ -28,5 +28,10 @@
 			<artifactId>Reflect</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.evolution</groupId>
+			<artifactId>Snakeyaml</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
